OAK-11332: Remove usage of Guava ImmutableList (copyOf) (#1929)